--- a/public/css/admin/inventario.css
+++ b/public/css/admin/inventario.css
@@ -90,6 +90,7 @@ main .Table--inventario {
     left: -20px;
     margin-top: 10px;
     padding: 10px;
+    width: 100%;
 }
   
 main .Table--inventario table {
@@ -114,14 +115,14 @@ main .Table--inventario table caption {
   }
   
 main .Table--inventario table th {
-    padding: 3px 5px;
+    padding: 10px 5px;
     border-top: 1px solid #aaa;
     border-bottom: 1px solid #aaa;
     font-weight: 600;
 }
   
 main .Table--inventario table td {
-    padding: 5px 30px;
+    padding: 10px 0px;
     text-align: center;
     font-weight: 500;
     font-size: 1.1em;
