Agregando Filtro de inventario

--- a/src/routes/admin/inventario.ejs
+++ b/src/routes/admin/inventario.ejs
@@ -13,17 +13,28 @@
         <section class="Content">
             <form class="Inputs--seleccionados">
                 <div class="Input--Container">
-                    <input type="search" placeholder="Buscar producto" id="Lupa">
+                    <input type="search" placeholder="Buscar producto" id="Buscar">
                     <label for="Lupa">
                         <img src="/images/icons/Search.png" alt="Lupa" id="Lupa">
                     </label>
                 </div>
                 <div class="Input--Container">
-                    <select>
+                    <select name="tipo">
+                        <option selected value="">Todos</option>
                         <option value="Ron">Ron</option>
-                        <option value="Voodka">Voodka</option>
+                        <option value="Voodka">Vodka</option>
                         <option value="Cerveza">Cerveza</option>
                         <option value="Vulcana">Vulcana</option>
+                        <option value="Tequila">Tequila</option>
+                        <option value="Whisky">Whisky</option>
+                        <option value="Gin">Gin</option>
+                        <option value="Coctel">Coctel</option>
+                        <option value="Vodka">Vodka</option>
+                        <option value="Cerveza">Cerveza</option>
+                        <option value="Vulcana">Vulcana</option>
+                        <option value="Tequila">Tequila</option>
+                        <option value="Whisky">Whisky</option>
+                        <option value="Gin">Gin</option>
                     </select>
                 </div>
             </form>
