--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -55,8 +55,7 @@
                     </div>
     
                     <article class="Grafica--Estadistica">
-                        grafica
-                        <!--Implementacion de Chartsjs-->
+                        <canvas id="myChart"></canvas>
                     </article>
                 </div>
             </section>
@@ -112,5 +111,7 @@
         </div>
         
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/js/admin/dashboard.js"></script>
 </body>
 </html>
