--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -73,6 +73,7 @@
                         <th>Imagen</th>
                         <th>Paquete</th>
                         <th>iva</th>
+                        <th>Descripción</th>
                         <th>Precio_detal</th>
                         <th>Precio_mayorista</th>
                         <th>stock</th>
@@ -88,6 +89,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -101,6 +103,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -114,6 +117,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -127,6 +131,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -140,6 +145,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -153,6 +159,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -166,6 +173,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -179,6 +187,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -192,6 +201,7 @@
                         <td>-</td>
                         <td>2</td>
                         <td>1.2</td>
+                        <td>Descripcion</td>
                         <td>35$</td>
                         <td>40$</td>
                         <td>2,5</td>
@@ -217,6 +227,10 @@
                             <option value="">Energetica</option>
                             <option value="">Te</option>
                         </select>
+                    </div>
+                    <div class="Items">
+                        <label for="Grados">Grados</label>
+                        <input placeholder="Grados del Producto" required type="text" id="Grados">
                     </div>
                     <div class="Items">
                         <label for="Litros">Litros</label>
@@ -248,6 +262,10 @@
                         <label for="Precio--mayorista">Precio mayorista</label>
                         <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" required>
                     </div>
+                </div>
+                <div class="input--Container">
+                    <label for="Descripcion">Descripción</label>
+                    <textarea id="Descripcion" required cols="50" placeholder="Ingrese la Descripcion del Producto"></textarea>
                 </div>
                 <div class="input--Container">
                     <div class="Items">
@@ -284,6 +302,10 @@
                         </select>
                     </div>
                     <div class="Items">
+                        <label for="Grados">Grados</label>
+                        <input placeholder="Grados del Producto" required type="text" id="Grados">
+                    </div>
+                    <div class="Items">
                         <label for="Litros">Litros</label>
                         <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros">
                     </div>
@@ -315,12 +337,16 @@
                     </div>
                 </div>
                 <div class="input--Container">
+                    <label for="Descripcion">Descripción</label>
+                    <textarea id="Descripcion" required cols="50" placeholder="Ingrese la Descripcion del Producto"></textarea>
+                </div>
+                <div class="input--Container">
                     <div class="Items">
                         <label for="stock">Cantidad de stock</label>
                         <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" required>
                     </div>
                 </div>
-                <button type="submit" id="modified">Modificar</button>
+                <button type="submit" id="submit">Modificar</button>
             </form>
         </dialog>
     </main>
