se mejora la estructura html de register vamos con el diseño

--- a/src/layouts/Register/Index.html
+++ b/src/layouts/Register/Index.html
@@ -15,7 +15,57 @@
                 <h2>Bienvenido a Drinkers</h2>
             </div>
             <form class="Form__page">
-                
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nombre--persona">Nombre</label>
+                        <input type="text" placeholder="Ingrese su nombre" required id="Nombre--persona">
+                        <label for="Nombre--persona">
+                            <img src="" alt="Person" id="Nombre--persona">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="Apellido--persona">Apellido</label>
+                        <input type="text" placeholder="Ingrese su nombre" required id="Apellido--persona">
+                        <label for="Apellido--persona">
+                            <img src="" alt="Person" id="Apellido--persona">
+                        </label>
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Fecha--nacimineto">Fecha de Nacimiento</label>
+                        <input type="date" id="Fecha--nacimineto">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Correo">Correo</label>
+                        <input type="email" placeholder="Ingrese su correo" required id="Correo">
+                        <label for="Correo">
+                            <img src="" alt="Person" id="Correo">
+                        </label>
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Password">Contraseña</label>
+                        <input type="password" placeholder="Ingrese su contraseña" required id="Password">
+                        <label for="Password">
+                            <img src="" alt="Person" id="Password">
+                        </label>
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Username">Username</label>
+                        <input type="text" placeholder="Ingrese su nombre de usuario" required id="Username">
+                        <label>
+                            <img src="" alt="Person" id="Username">
+                        </label>
+                    </div>
+                </div>
+                <a href="../Login/index.html"><input class="Submit--form" value="Crear Cuenta"></a>
+                <a href="../Login/index.html"><input class="Submit--form" value="Volver al Login"></a>
             </form>
         </div>
     </header>
