Se coloca los campos que cesar dijo y se cambia el diseño del register y un js en el register

--- a/src/layouts/Register/Index.html
+++ b/src/layouts/Register/Index.html
@@ -20,21 +20,21 @@
                         <label for="Nombre--persona">Nombre</label>
                         <input type="text" placeholder="Ingrese su nombre" required id="Nombre--persona">
                         <label for="Nombre--persona">
-                            <img src="" alt="Person" id="Nombre--persona">
+                            <img src="../../../public/images/icons/person.png" alt="Person">
                         </label>
                     </div>
                     <div>
                         <label for="Apellido--persona">Apellido</label>
                         <input type="text" placeholder="Ingrese su nombre" required id="Apellido--persona">
                         <label for="Apellido--persona">
-                            <img src="" alt="Person" id="Apellido--persona">
+                            <img src="../../../public/images/icons/Pencil--white.png" alt="Person">
                         </label>
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
-                        <label for="Fecha--nacimineto">Fecha de Nacimiento</label>
-                        <input type="date" id="Fecha--nacimineto">
+                        <label for="Fecha--nacimiento">Nacimiento</label>
+                        <input type="date" id="Fecha--nacimiento" required>
                     </div>
                 </div>
                 <div class="Input--Container">
@@ -42,7 +42,7 @@
                         <label for="Correo">Correo</label>
                         <input type="email" placeholder="Ingrese su correo" required id="Correo">
                         <label for="Correo">
-                            <img src="" alt="Person" id="Correo">
+                            <img src="../../../public/images/icons/mail.png" alt="Person">
                         </label>
                     </div>
                 </div>
@@ -51,20 +51,20 @@
                         <label for="Password">Contraseña</label>
                         <input type="password" placeholder="Ingrese su contraseña" required id="Password">
                         <label for="Password">
-                            <img src="" alt="Person" id="Password">
+                            <img src="../../../public/images/icons/lock.png" alt="Person">
                         </label>
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Username">Username</label>
-                        <input type="text" placeholder="Ingrese su nombre de usuario" required id="Username">
+                        <input type="text" placeholder="Nombre de Usuario" required id="Username">
                         <label>
-                            <img src="" alt="Person" id="Username">
+                            <img src="../../../public/images/icons/person.png" alt="Person">
                         </label>
                     </div>
                 </div>
-                <a href="../Login/index.html"><input class="Submit--form" value="Crear Cuenta"></a>
+                <a href="../Login/index.html"><input class="Submit--form" id="Cuenta" value="Crear Cuenta"></a>
                 <a href="../Login/index.html"><input class="Submit--form" value="Volver al Login"></a>
             </form>
         </div>
