--- a/src/layouts/Login/estilo.css
+++ b/src/layouts/Login/estilo.css
@@ -75,7 +75,7 @@ header .Content .Form__page .Input--container .Container input{
     border: none;
     outline: none;
     background-color: transparent;
-    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
     border-radius: 5px;
     color: #fff;
