cambios en algunas cosas

--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -43,8 +43,10 @@
                     <div class="Input--Container">
                         <span>Nuevo reporte</span>
                         <div class="Input">
-                            <input type="text" placeholder="Escribir el reporte" required>
-                            <img src="../../../../public/images/icons/Cancel.png" alt="icon">
+                            <input type="text" placeholder="Escribir el reporte" required id="Reporte">
+                            <label for="Reporte">
+                                <img src="../../../../public/images/icons/Cancel.png" alt="icon">
+                            </label>
                         </div>
                     </div>
                     <div class="Tipo--aviso">
