--- a/src/layouts/Login/index.html
+++ b/src/layouts/Login/index.html
@@ -30,8 +30,8 @@
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="../../Gerente/Main/Main.html" id="link"><input class="Submit--From" value="Ingresar"></a>
-                    <a href="../Register/Index.html"><input class="Submit--From" value="Crear Cuenta"></a>
+                    <input class="Submit--From" value="Ingresar">
+                    <input class="Submit--From" value="Crear Cuenta" id="Crear">
                 </div>
             </form>
         </div>
