Modificar y Crear listo inventario falta transferir la imagen a images

--- a/src/routes/admin/avisos.ejs
+++ b/src/routes/admin/avisos.ejs
@@ -50,7 +50,7 @@
                             <tr>
                                 <td><%= aviso.descripcion %></td>
                                 <td><%= aviso.tipo %></td>
-                                <td><%= aviso.fecha %></td>
+                                <td><%= aviso.fecha.toLocaleDateString() %></td>
                             </tr>
                         <% }); %>
                     </tbody>
