Falta Validaciones y ajustar las opciones

--- a/src/routes/admin/inventario.ejs
+++ b/src/routes/admin/inventario.ejs
@@ -171,10 +171,16 @@
                 <div class="input--Container">
                     <div class="Items">
                         <select required name="tipo">
-                            <option value="Bebida">Bebida</option>
-                            <option value="Alcoholica">Alcoholica</option>
-                            <option value="Energetica">Energetica</option>
-                            <option value="Te">Te</option>
+                            <label for="tipo">Tipo de bebida</label>
+                            <option value="">Seleccione un tipo</option>
+                            <option value="Ron">Ron</option>
+                            <option value="Vodka">Vodka</option>
+                            <option value="Cerveza">Cerveza</option>
+                            <option value="Vulcana">Vulcana</option>
+                            <option value="Energetica">Energética</option>
+                            <option value="Te">Té</option>
+                            <option value="Agua">Agua</option>
+                            <option value="Gaseosa">Gaseosa</option>
                         </select>
                     </div>
                     <div class="Items">
